<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.unifesp.prevencao.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarResultadoSintomas"
        android:layout_width="421dp"
        android:layout_height="75dp"
        android:background="#D58BC34A"
        android:clickable="true"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_bacteria_outline"
        app:navigationIcon="@drawable/arrow_left_outline"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/tool_bar_qual_mosquito"
        app:titleMargins="10dp">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtMosquitoSuspeito"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:text="@string/qual_mosquito"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F7DC09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarResultadoSintomas" />

    <ImageView
        android:id="@+id/imgZika"
        android:layout_width="334dp"
        android:layout_height="163dp"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMosquitoSuspeito"
        app:srcCompat="@drawable/ic_zika" />

    <TextView
        android:id="@+id/txtZika"
        android:layout_width="334dp"
        android:layout_height="154dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/texto_zika"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgZika" />

    <TextView
        android:id="@+id/txtChiku"
        android:layout_width="334dp"
        android:layout_height="154dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/texto_chiku"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgZika" />

    <TextView
        android:id="@+id/txtDengue"
        android:layout_width="334dp"
        android:layout_height="154dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/texto_dengue"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgZika" />

</androidx.constraintlayout.widget.ConstraintLayout>