<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.unifesp.prevencao.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarArbovirose"
        android:layout_width="421dp"
        android:layout_height="75dp"
        android:background="#D58BC34A"
        android:clickable="true"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_bacteria_outline"
        app:navigationIcon="@drawable/arrow_left_outline"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/tool_bar_entenda_arbovirose"
        app:titleMargins="10dp">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtOqueEArbovirose"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:text="@string/que_sao_arboviroses"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F7DC09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarArbovirose" />

    <TextView
        android:id="@+id/txtConteudoArbovirose"
        android:layout_width="369dp"
        android:layout_height="221dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/texto_o_que_arbovirose"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOqueEArbovirose" />

    <ImageView
        android:id="@+id/imgArbovirose"
        android:layout_width="316dp"
        android:layout_height="209dp"
        android:layout_marginStart="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConteudoArbovirose"
        app:srcCompat="@drawable/arbovirose" />


</androidx.constraintlayout.widget.ConstraintLayout>